Points to Volume modifier for the moss use case #84606

Closed
opened 2021-01-11 17:08:38 +01:00 by Dalai Felinto · 8 comments

image.png

image.png

  • There is no object input, but the points that come from the geometry socket input.
  • Unlike the existing modifier, instead of interior and exterior band we need a radius option.

The idea for this one is to use the radius reserved name. Even though this is related to the discussion #84595 (Address discoverability of built-in attribute names).

![image.png](https://archive.blender.org/developer/F9559942/image.png) ![image.png](https://archive.blender.org/developer/F9559937/image.png) * There is no object input, but the points that come from the geometry socket input. * Unlike the existing modifier, instead of interior and exterior band we need a radius option. The idea for this one is to use the radius reserved name. Even though this is related to the discussion #84595 (Address discoverability of built-in attribute names).
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Jacques Lucke self-assigned this 2021-01-20 16:23:09 +01:00

This issue was referenced by ff7a557c67

This issue was referenced by ff7a557c67096fc8de870e5fb43caa17b649c538
Author
Owner

@JacquesLucke I found an issue while trying this:

volume.blend

  • Connect the output of Points to Volume to both inputs of the Join Geometry node.

Crash: //source/blender/draw/intern/draw_cache_impl_volume.c:79:21: runtime error: member access within null pointer of type 'struct Volume'
Full backtrace: P1927

@JacquesLucke I found an issue while trying this: [volume.blend](https://archive.blender.org/developer/F9603271/volume.blend) * Connect the output of Points to Volume to *both* inputs of the Join Geometry node. Crash: `//source/blender/draw/intern/draw_cache_impl_volume.c:79:21: runtime error: member access within null pointer of type 'struct Volume'` Full backtrace: [P1927](https://archive.blender.org/developer/P1927.txt)
Member

Hm right, this is actually a limitation in the Join node currently, it shouldn't crash though, will fix that first. After that I can start looking into actually support merging volumes. It is more difficult and less obvious how it should be done compared to meshes.

The limitation is mentioned in 793547e7d1.

Hm right, this is actually a limitation in the Join node currently, it shouldn't crash though, will fix that first. After that I can start looking into actually support merging volumes. It is more difficult and less obvious how it should be done compared to meshes. The limitation is mentioned in 793547e7d1.
Author
Owner

Okay, I could not reproduce without the point to volume though. If you can reproduce, then this can just be moved to done.

Either way it will be nice if said limitations are mentioned in the manual.

Okay, I could not reproduce without the point to volume though. If you can reproduce, then this can just be moved to done. Either way it will be nice if said limitations are mentioned in the manual.

This issue was referenced by blender/documentation@7690

This issue was referenced by blender/documentation@7690

This issue was referenced by blender/documentation@7691

This issue was referenced by blender/documentation@7691
Author
Owner

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84606
No description provided.